Fix footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -328,11 +328,15 @@ p {
 }
 
 .footer .container {
-    margin-bottom: 16px;
+    margin-bottom: 0;
 }
 
 .footer .logo {
     display: inline-block;
+}
+
+.footer-logo {
+    margin-bottom: 16px;
 }
 
 .footer-text {
